# fec_demo

./: CMakeLists.txt  README.md  build.sh
configs/: client.json  client_1_1.json  client_5_2.json  client_5_3.json  server.json  server_1_1.json  server_5_2.json  server_5_3.json  tcp_client_1.json  tcp_server_1.json
fec/: encoding.h  fec.cpp  fec.h  galois.cpp  galois.h  galois_noasm.cpp  galois_noasm.h  galois_table.c  inversion_tree.cpp  inversion_tree.h  matrix.cpp  matrix.h  reedsolomon.cpp  reedsolomon.h
include/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
test/: client_1_1.cpp  server_1_1.cpp  tcp_client_1.cpp  tcp_server_1.cpp
util/: config.cpp  config.h  util.cpp  util.h
