cmake_minimum_required(VERSION 2.8.7)
project(kcp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -D_DEBUG -std=c++11 -pthread")

#set(SERVER test/server.cpp)
#set(CLIENT test/client.cpp)
set(SERVER_1 test/server_1_1.cpp)
SET(CLIENT_1 test/client_1_1.cpp)
#set(SERVER_3 test/server_5_3.cpp)
#SET(CLIENT_3 test/client_5_3.cpp)
#set(SERVER_2 test/server_5_2.cpp)
#SET(CLIENT_2 test/client_5_2.cpp)
#set(SERVER_KCP test/kcp_server.cpp)
#SET(CLIENT_KCP test/kcp_client.cpp)
#set(TEST test/test.cpp)

set(SOURCE_FILES)

#file(GLOB_RECURSE kcp_sources ${PROJECT_SOURCE_DIR}/kcp/*.c)
file(GLOB_RECURSE fec_sources ${PROJECT_SOURCE_DIR}/fec/*.cpp)
#file(GLOB_RECURSE sess_sources ${PROJECT_SOURCE_DIR}/session/*.cpp)
file(GLOB_RECURSE conf_sources ${PROJECT_SOURCE_DIR}/util/*.cpp)
file(GLOB_RECURSE udp_sources ${PROJECT_SOURCE_DIR}/include/*.cpp)
#list(APPEND SOURCE_FILES ${kcp_sources} ${fec_sources} ${sess_sources} ${conf_sources} ${udp_sources})
list(APPEND SOURCE_FILES ${fec_sources} ${conf_sources} ${udp_sources})

include_directories(${PROJECT_SOURCE_DIR}/third_party)
include_directories(${PROJECT_SOURCE_DIR}/fec)
#include_directories(${PROJECT_SOURCE_DIR}/kcp)
#include_directories(${PROJECT_SOURCE_DIR}/session)
include_directories(${PROJECT_SOURCE_DIR}/util)
include_directories(${PROJECT_SOURCE_DIR}/include/)

#add_executable(server ${SOURCE_FILES} ${SERVER})
#add_executable(client ${SOURCE_FILES} ${CLIENT})
add_executable(server_1 ${SOURCE_FILES} ${SERVER_1})
add_executable(client_1 ${SOURCE_FILES} ${CLIENT_1})
#add_executable(server_3 ${SOURCE_FILES} ${SERVER_3})
#add_executable(client_3 ${SOURCE_FILES} ${CLIENT_3})
#add_executable(server_2 ${SOURCE_FILES} ${SERVER_2})
#add_executable(client_2 ${SOURCE_FILES} ${CLIENT_2})
#add_executable(server_kcp ${SOURCE_FILES} ${SERVER_KCP})
#add_executable(client_kcp ${SOURCE_FILES} ${CLIENT_KCP})
#add_executable(test ${SOURCE_FILES} ${TEST})